objects/Asset.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>ParCode__c</fullName>
        <description>ParCode</description>
        <label>ParCode</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Trim__c</fullName>
        <label>Trim</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>SO_Vehicle_Manufacturer__c</referenceTo>
        <relationshipLabel>Vista Vehicles</relationshipLabel>
        <relationshipName>Vista_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected Model doesn&apos;t belong to the Brand</errorMessage>
            <filterItems>
                <field>SO_Vehicle_Model__c.SO_Manufacturer__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Brand__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Model__c</referenceTo>
        <relationshipLabel>Vista Vehicles</relationshipLabel>
        <relationshipName>Vista_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OUV_Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Price__c</fullName>
        <label>On the Road Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Engine__c</fullName>
        <label>Engine</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Brand_Code__c</fullName>
        <description>Brand Code</description>
        <label>Brand Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Market__c</fullName>
        <formula>CASE( OUV_Market_Code__c, 
&quot;IE&quot;,&quot;MENA&quot;, 
&quot;KC&quot;,&quot;MENA&quot;, 
&quot;AD&quot;,&quot;MENA&quot;, 
&quot;MS&quot;,&quot;MENA&quot;, 
&quot;SD&quot;,&quot;MENA&quot;, 
&quot;BB&quot;,&quot;MENA&quot;, 
&quot;YA&quot;,&quot;MENA&quot;, 
&quot;PA&quot;,&quot;MENA&quot;, 
&quot;GR&quot;,&quot;MENA&quot;, 
&quot;PL&quot;,&quot;MENA&quot;, 
&quot;DU&quot;,&quot;MENA&quot;, 
&quot;LY&quot;,&quot;MENA&quot;, 
&quot;SR&quot;,&quot;MENA&quot;, 
&quot;EB&quot;,&quot;MENA&quot;, 
&quot;LB&quot;,&quot;MENA&quot;, 
&quot;AU&quot;,&quot;MENA&quot;, 
&quot;IF&quot;,&quot;MENA&quot;, 
&quot;QA&quot;,&quot;MENA&quot;, 
&quot;MJ&quot;,&quot;MENA&quot;, 
&quot;AZ&quot;,&quot;MENA&quot;, 
&quot;JC&quot;,&quot;MENA&quot;, 
&quot;TF&quot;,&quot;MENA&quot;, 
&quot;EM&quot;,&quot;MENA&quot;, 
&quot;SC&quot;,&quot;MENA&quot;, 
&quot;JB&quot;,&quot;Japan&quot;, 
&quot;MH&quot;,&quot;Mexico&quot;, 
&quot;PH&quot;,&quot;Portugal&quot;, 
&quot;IJ&quot;,&quot;Italy&quot;, 
&quot;UB&quot;,&quot;United Kingdom&quot;, 
&quot;NB&quot;,&quot;Netherlands&quot;, 
&quot;BH&quot;,&quot;Brazil&quot;, 
&quot;AK&quot;,&quot;Austria&quot;, 
&quot;FF&quot;,&quot;France&quot;, 
&quot;US&quot;,&quot;USA&quot;, 
&quot;KB&quot;,&quot;South Korea&quot;, 
&quot;CJ&quot;,&quot;Colombia&quot;, 
&quot;DE&quot;,&quot;Germany&quot;, 
&quot;IT&quot;,&quot;Italy&quot;, 
&quot;CB&quot;,&quot;Canada&quot;, 
&quot;ES&quot;,&quot;Spain&quot;, 
&quot;CO&quot;,&quot;China&quot;, 
&quot;AJ&quot;,&quot;Australia&quot;, 
&quot;MT&quot;,&quot;Singapore&quot;, 
&quot;CH&quot;,&quot;China&quot;, 
&quot;UR&quot;,&quot;Russia&quot;, 
&quot;SK&quot;,&quot;Spain&quot;, 
&quot;IC&quot;,&quot;India&quot;, 
&quot;SH&quot;,&quot;South Africa&quot;, 
&quot;TB&quot;,&quot;Taiwan&quot;, 
&quot;BD&quot;,&quot;Belgium&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Option__c</fullName>
        <label>Option</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Region__c</fullName>
        <formula>CASE(  OUV_Market_Code__c , 
&quot;IE&quot;,&quot;Overseas&quot;, 
&quot;KC&quot;,&quot;Overseas&quot;, 
&quot;AD&quot;,&quot;Overseas&quot;, 
&quot;MS&quot;,&quot;Overseas&quot;, 
&quot;SD&quot;,&quot;Overseas&quot;, 
&quot;BB&quot;,&quot;Overseas&quot;, 
&quot;YA&quot;,&quot;Overseas&quot;, 
&quot;PA&quot;,&quot;Overseas&quot;, 
&quot;GR&quot;,&quot;Overseas&quot;, 
&quot;PL&quot;,&quot;Overseas&quot;, 
&quot;DU&quot;,&quot;Overseas&quot;, 
&quot;LY&quot;,&quot;Overseas&quot;, 
&quot;SR&quot;,&quot;Overseas&quot;, 
&quot;EB&quot;,&quot;Overseas&quot;, 
&quot;LB&quot;,&quot;Overseas&quot;, 
&quot;AU&quot;,&quot;Overseas&quot;, 
&quot;IF&quot;,&quot;Overseas&quot;, 
&quot;QA&quot;,&quot;Overseas&quot;, 
&quot;MJ&quot;,&quot;Overseas&quot;, 
&quot;AZ&quot;,&quot;Overseas&quot;, 
&quot;JC&quot;,&quot;Overseas&quot;, 
&quot;TF&quot;,&quot;Overseas&quot;, 
&quot;EM&quot;,&quot;Overseas&quot;, 
&quot;SC&quot;,&quot;Overseas&quot;, 
&quot;JB&quot;,&quot;Overseas&quot;, 
&quot;MH&quot;,&quot;Overseas&quot;, 
&quot;PH&quot;,&quot;Europe&quot;, 
&quot;IJ&quot;,&quot;Europe&quot;, 
&quot;UB&quot;,&quot;UK&quot;, 
&quot;NB&quot;,&quot;Europe&quot;, 
&quot;BH&quot;,&quot;Overseas&quot;, 
&quot;AK&quot;,&quot;Europe&quot;, 
&quot;FF&quot;,&quot;Europe&quot;, 
&quot;US&quot;,&quot;Major Markets&quot;, 
&quot;KB&quot;,&quot;Overseas&quot;, 
&quot;CJ&quot;,&quot;Overseas&quot;, 
&quot;DE&quot;,&quot;Europe&quot;, 
&quot;IT&quot;,&quot;Europe&quot;, 
&quot;CB&quot;,&quot;Major Markets&quot;, 
&quot;ES&quot;,&quot;Europe&quot;, 
&quot;CO&quot;,&quot;Major Markets&quot;, 
&quot;AJ&quot;,&quot;Overseas&quot;, 
&quot;MT&quot;,&quot;Overseas&quot;, 
&quot;CH&quot;,&quot;Major Markets&quot;, 
&quot;UR&quot;,&quot;Overseas&quot;, 
&quot;SK&quot;,&quot;Europe&quot;, 
&quot;IC&quot;,&quot;Overseas&quot;, 
&quot;SH&quot;,&quot;Overseas&quot;, 
&quot;TB&quot;,&quot;Overseas&quot;, 
&quot;BD&quot;,&quot;Europe&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alfa Romeo</fullName>
                </value>
                <value>
                    <fullName>Audi</fullName>
                </value>
                <value>
                    <fullName>Bentley</fullName>
                </value>
                <value>
                    <fullName>BMW</fullName>
                </value>
                <value>
                    <fullName>Chevrolet</fullName>
                </value>
                <value>
                    <fullName>Citroen</fullName>
                </value>
                <value>
                    <fullName>DAF</fullName>
                </value>
                <value>
                    <fullName>Daimler</fullName>
                </value>
                <value>
                    <fullName>Dennis</fullName>
                </value>
                <value>
                    <fullName>Ferrari</fullName>
                </value>
                <value>
                    <fullName>Fiat</fullName>
                </value>
                <value>
                    <fullName>Ford</fullName>
                </value>
                <value>
                    <fullName>Honda</fullName>
                </value>
                <value>
                    <fullName>Hyundai</fullName>
                </value>
                <value>
                    <fullName>Iveco</fullName>
                </value>
                <value>
                    <fullName>Jaguar</fullName>
                </value>
                <value>
                    <fullName>Jeep</fullName>
                </value>
                <value>
                    <fullName>Kia</fullName>
                </value>
                <value>
                    <fullName>Land Rover</fullName>
                </value>
                <value>
                    <fullName>Lexus</fullName>
                </value>
                <value>
                    <fullName>MAN</fullName>
                </value>
                <value>
                    <fullName>Maserati</fullName>
                </value>
                <value>
                    <fullName>Mercedes</fullName>
                </value>
                <value>
                    <fullName>MG</fullName>
                </value>
                <value>
                    <fullName>Mini</fullName>
                </value>
                <value>
                    <fullName>Nissan</fullName>
                </value>
                <value>
                    <fullName>Opel</fullName>
                </value>
                <value>
                    <fullName>Peugeot</fullName>
                </value>
                <value>
                    <fullName>Porsche</fullName>
                </value>
                <value>
                    <fullName>Renault</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_ABS_Date__c</fullName>
        <label>ABS Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Full_Vin__c</fullName>
        <label>Full VIN</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_JLRBrand__c</fullName>
        <label>Brand</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Owner_Aux__c</fullName>
        <label>Owner_Aux</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Code_trial__c</fullName>
        <formula>MID( OUV_Partner_Code__c , 4, 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CI Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_IO_Number__c</fullName>
        <label>IO Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_SBLI_Date__c</fullName>
        <label>SBLI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Short_VIN__c</fullName>
        <label>Short VIN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Sold_Date__c</fullName>
        <label>Sold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Trim_Code__c</fullName>
        <label>Trim Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Body_Style__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Body Style</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <errorMessage>Selected Body style doesn&apos;t belong to the Model/Series</errorMessage>
            <filterItems>
                <field>$Source.SO_Series_Name__c</field>
                <operation>notEqual</operation>
                <value/>
            </filterItems>
            <filterItems>
                <field>SO_Vehicle_Body_Style__c.SO_Series__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Series_Name__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.SO_Series_Name__c</field>
                <operation>equals</operation>
                <value/>
            </filterItems>
            <filterItems>
                <field>SO_Vehicle_Body_Style__c.SO_Model__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Model__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Body_Style__c</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Model_Name__c</fullName>
        <formula>SO_Model__r.Name</formula>
        <label>Model Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Options__c</fullName>
        <label>Market Options</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OUV_Build_Date__c</fullName>
        <label>Build Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Model_Code__c</fullName>
        <label>Vehicle Line Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Ordered_By__c</fullName>
        <label>Ordered By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Paint_Code__c</fullName>
        <label>Paint Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Series_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Series Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected Series doesn&apos;t belong to the Model</errorMessage>
            <filterItems>
                <field>SO_Vehicle_Series__c.SO_Model__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Model__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Series__c</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_ATO_Request__c</fullName>
        <label>ATO Request Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Called_Over__c</fullName>
        <label>Called Over</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Customer_Id__c</fullName>
        <label>Customer Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Destination__c</fullName>
        <label>Destination</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Market_Code__c</fullName>
        <label>Market Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_SBLI_Number__c</fullName>
        <label>SBLI Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Salesperson__c</fullName>
        <label>Salesperson</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Status_Code__c</fullName>
        <label>Status Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>112</fullName>
                </value>
                <value>
                    <fullName>135</fullName>
                </value>
                <value>
                    <fullName>140</fullName>
                </value>
                <value>
                    <fullName>145</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>155</fullName>
                </value>
                <value>
                    <fullName>160</fullName>
                </value>
                <value>
                    <fullName>165</fullName>
                </value>
                <value>
                    <fullName>175</fullName>
                </value>
                <value>
                    <fullName>190</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>205</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Vessel_Name__c</fullName>
        <label>Vessel Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_MOT_Due_Date__c</fullName>
        <label>MOT Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Transmission__c</fullName>
        <label>Transmission</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Factory_Code__c</fullName>
        <label>Factory Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Local_Option__c</fullName>
        <label>Local Option</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Order_Number__c</fullName>
        <externalId>true</externalId>
        <label>Order Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OUV_Partner_Code__c</fullName>
        <label>Partner Unique Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Product_Code__c</fullName>
        <label>5000 Code</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Vehicle_Line__c</fullName>
        <label>Vehicle Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Hand_of_Drive__c</fullName>
        <label>Hand of Drive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JLR_Hand_of_Drive</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Contract_Date__c</fullName>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Engine_Number__c</fullName>
        <label>Engine Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Financed_Days__c</fullName>
        <label>Financed Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Handover_Date__c</fullName>
        <label>Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Location_Code__c</fullName>
        <label>Location Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_NSC_Reference__c</fullName>
        <label>NSC Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Retail_Period__c</fullName>
        <label>Retail Period</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Unique_ID__c</fullName>
        <label>Partner Unique ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Confirmed_Date__c</fullName>
        <label>Confirmed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Production_Year__c</fullName>
        <label>Production Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Cart_Ref_Number__c</fullName>
        <label>Cart Ref Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Contract_Number__c</fullName>
        <label>Contract Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Model_Year_Code__c</fullName>
        <label>Model Year Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Ordering_Period__c</fullName>
        <label>Ordering Period</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Actual_Sail_Date__c</fullName>
        <label>Actual Sail Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Financial_Status__c</fullName>
        <label>Financial Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Invoice</fullName>
                </value>
                <value>
                    <fullName>NSC Invoice</fullName>
                </value>
                <value>
                    <fullName>Retailer Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_NSC_Invoice_Date__c</fullName>
        <label>NSC Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Trim_Description__c</fullName>
        <label>Trim Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SO_Warranty_End_Date__c</fullName>
        <label>Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annual_Market_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Annual Market Summary</label>
        <referenceTo>OUV_AnnualMarketSummary__c</referenceTo>
        <relationshipLabel>Vista Vehicles</relationshipLabel>
        <relationshipName>Vista_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Model_Description__c</fullName>
        <label>Model Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Order_Last_Update__c</fullName>
        <label>Order Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Paint_Description__c</fullName>
        <label>Paint Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Registration_Date__c</fullName>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Transmission_Code__c</fullName>
        <label>Transmission Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Type_of_Sale_Code__c</fullName>
        <label>Type of Sale Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AAA</fullName>
                </value>
                <value>
                    <fullName>AAB</fullName>
                    <isActive>false</isActive>
                    <label>AAB</label>
                </value>
                <value>
                    <fullName>AAC</fullName>
                    <isActive>false</isActive>
                    <label>AAC</label>
                </value>
                <value>
                    <fullName>AAG</fullName>
                </value>
                <value>
                    <fullName>AAH</fullName>
                </value>
                <value>
                    <fullName>AAJ</fullName>
                </value>
                <value>
                    <fullName>AAK</fullName>
                    <isActive>false</isActive>
                    <label>AAK</label>
                </value>
                <value>
                    <fullName>AAL</fullName>
                </value>
                <value>
                    <fullName>AAM</fullName>
                </value>
                <value>
                    <fullName>AAO</fullName>
                    <isActive>false</isActive>
                    <label>AAO</label>
                </value>
                <value>
                    <fullName>ABA</fullName>
                </value>
                <value>
                    <fullName>ACA</fullName>
                    <isActive>false</isActive>
                    <label>ACA</label>
                </value>
                <value>
                    <fullName>ADA</fullName>
                </value>
                <value>
                    <fullName>AGA</fullName>
                </value>
                <value>
                    <fullName>AJA</fullName>
                </value>
                <value>
                    <fullName>AKA</fullName>
                    <isActive>false</isActive>
                    <label>AKA</label>
                </value>
                <value>
                    <fullName>CAA</fullName>
                    <isActive>false</isActive>
                    <label>CAA</label>
                </value>
                <value>
                    <fullName>CAB</fullName>
                </value>
                <value>
                    <fullName>CAC</fullName>
                </value>
                <value>
                    <fullName>CAE</fullName>
                </value>
                <value>
                    <fullName>CAG</fullName>
                </value>
                <value>
                    <fullName>CAH</fullName>
                </value>
                <value>
                    <fullName>CAJ</fullName>
                </value>
                <value>
                    <fullName>CAK</fullName>
                </value>
                <value>
                    <fullName>CAL</fullName>
                    <isActive>false</isActive>
                    <label>CAL</label>
                </value>
                <value>
                    <fullName>CAM</fullName>
                    <isActive>false</isActive>
                    <label>CAM</label>
                </value>
                <value>
                    <fullName>CAO</fullName>
                </value>
                <value>
                    <fullName>CAP</fullName>
                </value>
                <value>
                    <fullName>CAQ</fullName>
                </value>
                <value>
                    <fullName>CAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Actual_Vessel_Name__c</fullName>
        <label>Actual Vessel Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Market_Description__c</fullName>
        <label>Market Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Retailer_Reference__c</fullName>
        <label>Retailer Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Specification_Lock__c</fullName>
        <label>Specification Lock</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Status_Description__c</fullName>
        <label>Status Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Vehicle_Model_Code__c</fullName>
        <label>Vehicle Model Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Brochure_Model_Code__c</fullName>
        <label>Brochure Model Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Partner_Description__c</fullName>
        <label>Partner Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Product_Description__c</fullName>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Registration_Number__c</fullName>
        <label>Registration Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Derivative_Pack_Code__c</fullName>
        <label>Derivative Pack Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Detailed_Status_Code__c</fullName>
        <label>Detailed Status Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Emissions_Efficiency__c</fullName>
        <label>Emissions/Efficiency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Location_Description__c</fullName>
        <label>Location Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Second_Handover_Date__c</fullName>
        <description>OUV_Second_Handover_Date</description>
        <label>OUV_Second_Handover_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Next_Service_Due_Date__c</fullName>
        <label>Next Service Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Planned_Handover_Date__c</fullName>
        <label>Planned Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Retailer_Invoice_Date__c</fullName>
        <label>Retailer Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Data_Loading_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Loading Reference</label>
        <referenceTo>OUV_Vehicle__c</referenceTo>
        <relationshipLabel>Vista Vehicles</relationshipLabel>
        <relationshipName>Vista_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Model_Year_Description__c</fullName>
        <label>Model Year Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SO_Bypass_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Primary_Exterior_Colour__c</fullName>
        <label>Primary Exterior Colour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JLR_Primary_Exterior_Colour</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Intermediate_Destination__c</fullName>
        <label>Intermediate Destination</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Transmission_Description__c</fullName>
        <label>Transmission Description</label>
        <type>TextArea</type>
    </fields>
</CustomObject>